--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13589,6 +13589,7 @@ keys:
             segments:
               type: list
               primary_key: name
+              required: true
               items:
                 type: dict
                 keys:
