--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -64,6 +64,7 @@ keys:
             segments:
               type: list
               primary_key: name
+              required: true
               items:
                 type: dict
                 keys:
