--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
@@ -18,5 +18,26 @@ router segment-security
    policy POLICY-TEST1
       10 application APP-TEST-1 action forward stateless
       20 application APP-TEST-2 action drop stateless
+   !
+   vrf default
+      segment SEGMENT-TEST1
+         definition
+            match prefix-ipv4 MATCH-LIST1
+            match prefix-ipv4 MATCH-LIST10
+            match prefix-ipv6 MATCH-LIST11
+         !
+         policies
+            from MATCH-LIST20 policy policy-forward-all
+            from MATCH-LIST21 policy POLICY-TEST1
+            from MATCH-LIST30 policy policy-drop-all
+   vrf SECURE
+      segment SEGMENT-TEST1
+         definition
+            match prefix-ipv4 MATCH-LIST1
+            match prefix-ipv4 MATCH-LIST10
+         !
+         policies
+            from MATCH-LIST20 policy policy-forward-all
+            from MATCH-LIST30 policy policy-drop-all
 !
 end
