--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13700,8 +13700,8 @@ keys:
                           description: The name of the source segment.
                         policy:
                           type: str
-                          description: "The name of the policy to apply. The built-in
-                            policies are \u2018policy-forward-all\u2019 and \u2018policy-drop-all\u2019."
+                          description: The name of the policy to apply. The built-in
+                            policies are `policy-forward-all` and `policy-drop-all`.
   router_service_insertion:
     type: dict
     description: Configure network services inserted to data forwarding
