--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -104,4 +104,4 @@ keys:
                           description: The name of the source segment.
                         policy:
                           type: str
-                          description: The name of the policy to apply. The built-in policies are ‘policy-forward-all’ and ‘policy-drop-all’.
+                          description: The name of the policy to apply. The built-in policies are 'policy-forward-all' and 'policy-drop-all'.
