--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -87,6 +87,8 @@ all:
         failure-missing-evpn-multicast-peg-rps:
         failure-duplicate-evpn-vlan-bundle-name:
         failure-no-local-path-group-in-default-policy:
+        ipv4-acl-in-missing-on-wan-interface:
+        ipv4-acls:
         missing-avt-id-cv-pathfinder:
         missing-data-plane_cpu-allocation-max:
         ntp-settings-server-vrf-missing-mgmt-ip:
