--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_carriers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_carriers.schema.yml
@@ -26,3 +26,9 @@ keys:
           type: str
           description: The path-group to which this carrier belongs.
           required: true
+        trusted:
+          type: bool
+          default: false
+          description: |-
+            Set this to `true` to mark this carrier as "trusted".
+            WAN interfaces require an inbound access-list to be set unless the carrier is "trusted".
