--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -9,15 +9,21 @@ router service-insertion
       interface Ethernet2/2.2 next-hop 10.10.10.10
       monitor connectivity host host1
    connection connection2
-      interface Tunnel2 primary
-      interface Tunnel3 secondary
+      interface Tunnel1 primary
+      interface Tunnel2 secondary
       monitor connectivity host host2
    connection connection3
-      interface Tunnel4 primary
-      interface Tunnel5 secondary
+      interface Tunnel3 secondary
       monitor connectivity host host3
    connection connection4
-      interface Ethernet3/1.1 next-hop 10.10.10.10
+      interface Tunnel4 primary
+   connection connection5
+      interface Tunnel5 primary
+      interface Tunnel6 secondary
+   connection connection6
+      interface Ethernet2/2.2 next-hop 10.10.10.10
+   connection connection7
+      interface Ethernet3/1 next-hop 10.10.10.10
       monitor connectivity host host4
 !
 no enable password
