--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-service-insertion.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-service-insertion.yml
@@ -9,19 +9,29 @@ router_service_insertion:
       monitor_connectivity_host: host1
     - name: connection2
       tunnel_interface:
-        primary: Tunnel2
-        secondary: Tunnel3
+        primary: Tunnel1
+        secondary: Tunnel2
       monitor_connectivity_host: host2
     - name: connection3
       tunnel_interface:
-        primary: Tunnel4
-        secondary: Tunnel5
+        secondary: Tunnel3
       monitor_connectivity_host: host3
     - name: connection4
+      tunnel_interface:
+        primary: Tunnel4
+    - name: connection5
+      tunnel_interface:
+        primary: Tunnel5
+        secondary: Tunnel6
+    - name: connection6
       ethernet_interface:
-        name: Ethernet3/1.1
+        name: Ethernet2/2.2
+        next_hop: 10.10.10.10
+    - name: connection7
+      ethernet_interface:
+        name: Ethernet3/1
         next_hop: 10.10.10.10
       tunnel_interface:
-        primary: Tunnel6
-        secondary: Tunnel7
+        primary: Tunnel9
+        secondary: Tunnel10
       monitor_connectivity_host: host4
