--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13479,9 +13479,11 @@ keys:
               keys:
                 name:
                   type: str
-                  description: e.g. Ethernet2/2.2
+                  required: true
+                  description: e.g. Ethernet2 or Ethernet2/2.2
                 next_hop:
                   type: str
+                  required: true
                   description: Next-hop IPv4 address (without mask).
             tunnel_interface:
               type: dict
@@ -13495,6 +13497,7 @@ keys:
                   description: e.g. Tunnel2
                 secondary:
                   type: str
+                  description: e.g Tunnel3
             monitor_connectivity_host:
               type: str
               description: 'Monitor connectivity host to use to derive the health
