--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6417,6 +6417,8 @@ keys:
                             type: int
                           lossrate:
                             type: str
+                            convert_types:
+                            - float
                       description:
                         type: str
                       id:
