--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -76,6 +76,7 @@ keys:
                     required: true
                     description: The set of match-lists that define the segment. These can be a mix of IPv4 and IPv6 lists.
                     max_length: 2
+                    primary_key: address_family
                     items:
                       type: dict
                       keys:
@@ -96,6 +97,7 @@ keys:
                     type: list
                     required: true
                     description: The policies controlling traffic into the segment.
+                    primary_key: source
                     items:
                       type: dict
                       keys:
