--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -45,6 +45,7 @@ keys:
                   action:
                     type: str
                     required: true
+                    description: The action to take - note that platform support for the redirect action is limited.
                     valid_values:
                       - "forward"
                       - "drop"
