Updated testing for covered usecase

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
@@ -31,7 +31,7 @@ router segment-security
       segment SEGMENT-TEST2
          definition
             match prefix-ipv6 MATCH-LIST3
-            match prefix-ipv4 MATCH-LIST4
+            match covered prefix-list ipv4 MATCH-LIST4
          !
          policies
             from MATCH-LIST20 policy policy-forward-all
