--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
@@ -24,8 +24,7 @@ keys:
             - str
           description: |-
             Path-group id.
-
-            TODO: Required until an auto ID algorithm is implemented.
+            Required until an auto ID algorithm is implemented.
           required: true
         description:
           type: str
