--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vxlan_interface.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vxlan_interface.schema.yml
@@ -37,6 +37,9 @@ keys:
                 type: int
                 convert_types:
                   - str
+              vtep_to_vtep_bridging:
+                type: bool
+                description: Enable bridging between different VTEPs in vxlan overlay.
               virtual_router_encapsulation_mac_address:
                 type: str
                 description: |
