Refactor(eos_designs): Mark flow_tracking_settings as PREVIEW for 4.7.0

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/flow_tracking_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/flow_tracking_settings.schema.yml
@@ -8,6 +8,8 @@ type: dict
 keys:
   flow_tracking_settings:
     description: |-
+      PREVIEW: This key is currently not supported
+
       Define the flow tracking parameters for this topology.
     type: dict
     keys:
