Doc: Address some comments

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3959,10 +3959,10 @@ keys:
     documentation_options:
       table: wan-settings
     default: false
-    description: 'WAN STUN connections will be authenticated and secured with DTLS
-      by default.
+    description: 'WAN STUN connections are authenticated and secured with DTLS by
+      default.
 
-      For CV-Pathfinder deployments CloudVision will automatically deploy certificates
+      For CV Pathfinder deployments CloudVision will automatically deploy certificates
       on the devices.
 
       In case of AutoVPN the certificates must be deployed manually to all devices.
