EVPN-MULTICAST-DISABLED with EVPN Multicast Disabled in host variable

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/EVPN-MULTICAST-DISABLED.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/EVPN-MULTICAST-DISABLED.yml
@@ -1,4 +1,5 @@
-# Disable Multicast to be configured on node
+# Disable EVPN Multicast while still having EVPN Multicast to be configured on node.
+# We should see that no EVPN services be configured with EVPN Multicast
 
-# evpn_multicast: false
-# underlay_multicast: false
+evpn_multicast: false
+underlay_multicast: true
