--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
@@ -7,9 +7,9 @@
     cv_server: www.cv-staging.corp.arista.io
     # token: "{{ lookup('file', playbook_dir ~ '/token-aawg-ci.tok')}}"
     token: "{{ lookup('env', 'CVAAS_AAWG_CI') }}"
-    configlet_url: https://{{ cv_server }}/api/v3/services/arista.configlet.v1.ConfigletService/GetOne
-    cc_url: https://{{ cv_server }}/api/v3/services/arista.changecontrol.v1.ChangeControlService/GetOne
-    tag_url: https://{{ cv_server }}/api/v3/services/arista.tag.v2.TagAssignmentService/GetOne
+    configlet_url: https://{{ cv_server }}/api/resources/configlet/v1/Configlet
+    cc_url: https://{{ cv_server }}/api/resources/changecontrol/v1/ChangeControl/all
+    tag_url: https://{{ cv_server }}/api/resources/tag/v2/TagAssignment/all
     configuration_dir: "{{ playbook_dir }}/intended/configs"
     structured_config_dir: "{{ playbook_dir }}/intended/structured_configs"
     intended_tag_device: ci-s1-leaf1
@@ -106,17 +106,13 @@
       delegate_to: localhost
       run_once: true
       ansible.builtin.uri:
-        url: '{{ configlet_url }}'
+        url: '{{ configlet_url + "?key.workspaceId=" + ws_name + "&key.configlet_id=" + item }}'
         return_content: true
         validate_certs: false
         headers:
           Cookie: "access_token={{ token }}"
-        method: POST
+        method: GET
         body_format: json
-        body:
-          key:
-            workspace_id: '{{ ws_name }}'
-            configlet_id: '{{ item }}'
       loop:
         - "avd-ci-s1-leaf1"
         - "avd-ci-s1-leaf2"
@@ -137,10 +133,11 @@
         method: POST
         body_format: json
         body:
-          key:
-            id: Workspace-{{ ws_name }}
+          partialEqFilter:
+          - key:
+              id: Workspace-{{ ws_name }}
       register: cc_info
-      until: cc_info.json[0].value.status == "CHANGE_CONTROL_STATUS_COMPLETED"
+      until: cc_info.json.result.value.status == "CHANGE_CONTROL_STATUS_COMPLETED"
       retries: 5
       delay: 30
 
@@ -153,7 +150,7 @@
                   "{{ configuration_dir ~ '/test_configs' }}/ci-s1-leaf4.cfg"
         ]
       ansible.builtin.set_fact:
-        response_configlet: "{{ response_configlet | default({}) | combine({item.0.json[0].value.body | trim: item.1}) }}"
+        response_configlet: "{{ response_configlet | default({}) | combine({item.0.json.value.body | trim: item.1}) }}"
       loop: "{{ result.results | zip(configs) | list }}"
 
     - name: Check configlets
@@ -174,12 +171,13 @@
         method: POST
         body_format: json
         body:
-          key:
-            workspaceId: '{{ ws_name }}'
-            elementType: 1
-            label: "{{ item.name }}"
-            value: "{{ item.value }}"
-            deviceId: "{{ intended_tag_device }}"
+          partialEqFilter:
+          - key:
+              workspaceId: '{{ ws_name }}'
+              elementType: 1
+              label: "{{ item.name }}"
+              value: "{{ item.value }}"
+              deviceId: "{{ intended_tag_device }}"
       loop:
         "{{ intended_tags.metadata.cv_tags.device_tags }}"
 
@@ -196,13 +194,14 @@
         method: POST
         body_format: json
         body:
-          key:
-            workspaceId: '{{ ws_name }}'
-            elementType: 2
-            label: "{{ item.tags[0].name }}"
-            value: "{{ item.tags[0].value }}"
-            deviceId: "{{ intended_tag_device }}"
-            interfaceId: "{{ item.interface }}"
+          partialEqFilter:
+          - key:
+              workspaceId: '{{ ws_name }}'
+              elementType: 2
+              label: "{{ item.tags[0].name }}"
+              value: "{{ item.tags[0].value }}"
+              deviceId: "{{ intended_tag_device }}"
+              interfaceId: "{{ item.interface }}"
       loop:
         "{{ intended_tags.metadata.cv_tags.interface_tags }}"
 
@@ -251,12 +250,13 @@
         method: POST
         body_format: json
         body:
-          key:
-            workspaceId: '{{ ws_name }}'
-            elementType: 1
-            label: "{{ item.name }}"
-            value: "{{ item.value }}"
-            deviceId: "{{ intended_tag_device }}"
+          partialEqFilter:
+          - key:
+              workspaceId: '{{ ws_name }}'
+              elementType: 1
+              label: "{{ item.name }}"
+              value: "{{ item.value }}"
+              deviceId: "{{ intended_tag_device }}"
       loop:
         "{{ intended_strict_tags.metadata.cv_tags.device_tags }}"
 
@@ -307,12 +307,13 @@
         method: POST
         body_format: json
         body:
-          key:
-            workspaceId: '{{ ws_name_value }}'
-            elementType: 1
-            label: "{{ item.name }}"
-            value: "{{ item.value }}"
-            deviceId: "{{ intended_tag_device }}"
+          partialEqFilter:
+          - key:
+              workspaceId: '{{ ws_name_value }}'
+              elementType: 1
+              label: "{{ item.name }}"
+              value: "{{ item.value }}"
+              deviceId: "{{ intended_tag_device }}"
       loop:
         "{{ intended_value_tags.metadata.cv_tags.device_tags }}"
 
@@ -365,10 +366,11 @@
         method: POST
         body_format: json
         body:
-          key:
-            id: Workspace-{{ ws_name_dotted }}
+          partialEqFilter:
+          - key:
+              id: Workspace-{{ ws_name_dotted }}
       register: cc_info_dotted_hostname
-      until: cc_info_dotted_hostname.json[0].value.status == "CHANGE_CONTROL_STATUS_COMPLETED"
+      until: cc_info_dotted_hostname.json.result.value.status == "CHANGE_CONTROL_STATUS_COMPLETED"
       retries: 5
       delay: 30
 
@@ -410,17 +412,13 @@
       vars:
         ws_name_dotted: avd-static-studio-test-dotted-{{ r }}
       ansible.builtin.uri:
-        url: '{{ configlet_url }}'
+        url: '{{ configlet_url + "?key.workspaceId=" + ws_name + "&key.configlet_id=" + item }}'
         return_content: true
         validate_certs: false
         headers:
           Cookie: "access_token={{ token }}"
-        method: POST
+        method: GET
         body_format: json
-        body:
-          key:
-            workspace_id: '{{ ws_name_dotted }}'
-            configlet_id: '{{ item }}'
       loop:
         - "avd-ci-s1-leaf1"
       register: dotted_result
@@ -430,7 +428,7 @@
       vars:
         configs: ["{{ configuration_dir ~ '/dotted_hostname/test_dotted_hostname' }}/ci-s1-leaf.1.cfg"]
       ansible.builtin.set_fact:
-        dotted_response_configlet: "{{ response_configlet | default({}) | combine({item.0.json[0].value.body | trim: item.1}) }}"
+        dotted_response_configlet: "{{ response_configlet | default({}) | combine({item.0.json.value.body | trim: item.1}) }}"
       loop: "{{ dotted_result.results | zip(configs) | list }}"
 
     - name: Check configlets
@@ -485,9 +483,10 @@
         method: POST
         body_format: json
         body:
-          key:
-            id: Workspace-{{ ws_name_dotted }}
+          partialEqFilter:
+          - key:
+              id: Workspace-{{ ws_name_dotted }}
       register: cc_info_dotted_hostname_reset
-      until: cc_info_dotted_hostname_reset.json[0].value.status == "CHANGE_CONTROL_STATUS_COMPLETED"
+      until: cc_info_dotted_hostname_reset.json.result.value.status == "CHANGE_CONTROL_STATUS_COMPLETED"
       retries: 5
       delay: 30
