--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/DC1-LEAF2A.yml
@@ -961,6 +961,8 @@ vlan_interfaces:
   - opzone
   description: Tenant_A_OP_Zone_1
   shutdown: false
+  access_group_in: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Tenant_A_OP_Zone_1
+  access_group_out: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Tenant_A_OP_Zone_1
   ip_address_virtual: 10.1.10.1/24
   vrf: Tenant_A_OP_Zone
 - name: Vlan111
@@ -1229,5 +1231,20 @@ virtual_source_nat_vrfs:
   ip_address: 10.255.1.10
 - name: Tenant_A_OSPF
   ip_address: 10.255.11.10
+ip_access_lists:
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Tenant_A_OP_Zone_1
+  entries:
+  - sequence: 15
+    action: deny
+    protocol: ip
+    source: any
+    destination: 10.1.10.1
+- name: TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Tenant_A_OP_Zone_1
+  entries:
+  - remark: Some remark will not require source and destination fields.
+  - action: permit
+    protocol: ip
+    source: 10.1.10.1
+    destination: any
 metadata:
   platform: 7280R
