--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-CL1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-CL1A.cfg
@@ -206,6 +206,13 @@ interface Vxlan1
    vxlan vlan 311 vni 30311
    vxlan vlan 350 vni 30350
 !
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Tenant_A_OP_Zone_1
+   15 deny ip any host 10.1.10.1
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Tenant_A_OP_Zone_1
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.1.10.1 any
+!
 ip routing
 no ip routing vrf MGMT
 !
