--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-L2LEAF4A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-L2LEAF4A.cfg
@@ -86,6 +86,13 @@ interface Management1
    no shutdown
    vrf MGMT
    ip address 192.168.200.119/24
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-IN_Tenant_A_OP_Zone_1
+   15 deny ip any host 10.1.10.1
+!
+ip access-list TEST-IPV4-ACL-WITH-IP-FIELDS-OUT_Tenant_A_OP_Zone_1
+   remark Some remark will not require source and destination fields.
+   permit ip host 10.1.10.1 any
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 192.168.200.5
