--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/EVPN-MULTICAST-DISABLED.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/EVPN-MULTICAST-DISABLED.yml
@@ -1,5 +1,5 @@
-# Disable EVPN Multicast while still having EVPN Multicast to be configured on node.
-# We should see that no EVPN services be configured with EVPN Multicast
+# Disable EVPN Multicast while still having underlay Multicast to be configured on node.
+# Expecting that no EVPN service is configured with EVPN Multicast.
 
 evpn_multicast: false
 underlay_multicast: true
