Refactor(eos_cli_config_gen): Add logging option and source interface option (#2)
* Allow for log and stateless bools in schema
* Update schema
* Add stateless and log option to policies
* Schema changes
* handle stateless
* handle log
* update tests

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-segment-security.cfg
@@ -16,9 +16,9 @@ router segment-security
    no shutdown
    !
    policy POLICY-TEST1
-      10 application APP-TEST-1 action forward stateless
-      20 application APP-TEST-2 action drop stateless
-      25 application APP-TEST-3 action redirect next-hop 198.51.100.1
+      10 application APP-TEST-1 action forward
+      20 application APP-TEST-2 action drop stateless log
+      25 application APP-TEST-3 action redirect next-hop 198.51.100.1 stateless
    !
    vrf default
       segment SEGMENT-TEST1
@@ -41,6 +41,8 @@ router segment-security
    vrf SECURE
       segment SEGMENT-TEST1
          definition
+            match interface Ethernet1
+            match interface Ethernet2
             match prefix-ipv6 MATCH-LIST1
             match prefix-ipv4 MATCH-LIST10
          !
