--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-segment-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-segment-security.yml
@@ -8,9 +8,11 @@ router_segment_security:
         - sequence: 10
           application: APP-TEST-1
           action: forward
+          stateless: false
         - sequence: 20
           application: APP-TEST-2
           action: drop
+          log: true
         - sequence: 25
           application: APP-TEST-3
           action: redirect
@@ -20,20 +22,22 @@ router_segment_security:
       segments:
         - name: SEGMENT-TEST1
           definition:
-            - name: MATCH-LIST10
-              address_family: ipv4
-            - name: MATCH-LIST11
-              address_family: ipv6
+            match_lists:
+              - name: MATCH-LIST10
+                address_family: ipv4
+              - name: MATCH-LIST11
+                address_family: ipv6
           policies:
             - source: MATCH-LIST22
               policy: POLICY-TEST1
         - name: SEGMENT-TEST2
           definition:
-            - name: MATCH-LIST4
-              address_family: ipv4
-              covered: true
-            - name: MATCH-LIST3
-              address_family: ipv6
+            match_lists:
+              - name: MATCH-LIST4
+                address_family: ipv4
+                covered: true
+              - name: MATCH-LIST3
+                address_family: ipv6
           policies:
             - source: MATCH-LIST20
               policy: policy-forward-all
@@ -45,10 +49,14 @@ router_segment_security:
       segments:
         - name: SEGMENT-TEST1
           definition:
-            - name: MATCH-LIST10
-              address_family: ipv4
-            - name: MATCH-LIST1
-              address_family: ipv6
+            match_lists:
+              - name: MATCH-LIST10
+                address_family: ipv4
+              - name: MATCH-LIST1
+                address_family: ipv6
+            interfaces:
+              - Ethernet1
+              - Ethernet2
           policies:
             - source: MATCH-LIST20
               policy: policy-forward-all
