--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13636,6 +13636,14 @@ keys:
                     - forward
                     - drop
                     - redirect
+                  log:
+                    type: bool
+                    description: Enable logging - note that platform support is limited.
+                  stateless:
+                    type: bool
+                    description: Take action, regardless of state. Should be set to
+                      'true' for MSS-G.
+                    default: true
                   next_hop:
                     type: str
                     description: When the action is 'redirect', this indicates the
@@ -13661,30 +13669,38 @@ keys:
                     type: str
                     description: Segment name.
                   definition:
-                    type: list
+                    type: dict
                     required: true
-                    description: The set of match-lists that define the segment. These
-                      can be a mix of IPv4 and IPv6 lists.
-                    max_length: 2
-                    primary_key: address_family
-                    items:
-                      type: dict
-                      keys:
-                        name:
-                          type: str
-                          description: The name of the prefix match-list. You can
-                            have a maximum of one per address-family.
-                        address_family:
-                          type: str
-                          required: true
-                          description: Indicate which address-family the match list
-                            belongs to e.g. ipv4 or ipv6.
-                          valid_values:
-                          - ipv4
-                          - ipv6
-                        covered:
-                          type: bool
-                          default: false
+                    keys:
+                      interfaces:
+                        type: list
+                        description: The names of the source interface e.g. Port-Channel1
+                          - note that platform support is limited.
+                        min_length: 1
+                      match_lists:
+                        type: list
+                        description: The set of match-lists that define the segment.
+                          These can be a mix of IPv4 and IPv6 lists.
+                        max_length: 2
+                        primary_key: address_family
+                        items:
+                          type: dict
+                          keys:
+                            name:
+                              type: str
+                              description: The name of the prefix match-list. You
+                                can have a maximum of one per address-family.
+                            address_family:
+                              type: str
+                              required: true
+                              description: Indicate which address-family the match
+                                list belongs to e.g. ipv4 or ipv6.
+                              valid_values:
+                              - ipv4
+                              - ipv6
+                            covered:
+                              type: bool
+                              default: false
                   policies:
                     type: list
                     required: true
